# AION

./: BUILD_FIXES.md  BUILD_FIXES_COMPLETE.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LIMITACOES_IMPORTANTES.md  LITERT_FIX.md  LITERT_IMPLEMENTATION.md  LITERT_ONLY_MODELS.md  LLAMA_CPP_INTEGRATION.md  MODELOS_MULTIMODAIS.md  MULTIMODAL_MODELS_INFO.md  README.md  README_V2.md  VISION_MODELS_INTEGRATION.md  build.gradle.kts
.github/workflows/: main.yml
.gitscout/: COMMIT_EDITMSG  index
.gitscout/logs/refs/heads/: master
.gitscout/refs/tags/: event-init-jam-be99c7a3-f129-46ec-90bc-c5f805521a91  event-toolu_012ezSdVhETewkjgWzxYzSFP  event-toolu_017BYarzRPUYBNZnUqyHP9Zr  event-toolu_01HX1qERH56rRMUcE5JnvJkt  event-toolu_01UZbsGfkTUWW5yiRffF5AJ1
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp  llama_bridge.h  native-lib.cpp
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: accessibility_service_config.xml
deivid22srk/AION/: GOOGLE_AI_EDGE_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  README.md  settings.gradle.kts
deivid22srk/AION/.capy/: pr-body-google-ai-edge.md
deivid22srk/AION/.git.scout-backup/: HEAD  config  index  packed-refs
deivid22srk/AION/.git.scout-backup/logs/: HEAD
deivid22srk/AION/.git.scout-backup/refs/heads/capy/: cap-1-5952d4b3
deivid22srk/AION/.github/workflows/: main.yml
deivid22srk/AION/app/: build.gradle.kts
deivid22srk/AION/app/src/main/cpp/: CMakeLists.txt  image_processor.cpp  image_processor.h
(+34 files in other folders)
